unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>areaTest__c</fullName>
        <description>cascasc</description>
        <inlineHelpText>ascsacasc</inlineHelpText>
        <label>areaTest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auto__c</fullName>
        <description>weere</description>
        <inlineHelpText>werwer</inlineHelpText>
        <label>auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>check_field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>check field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>demo__c</fullName>
        <description>default value</description>
        <label>demo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email1111__c</fullName>
        <description>thjis is a desc</description>
        <inlineHelpText>help text</inlineHelpText>
        <label>email111</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>external__c</fullName>
        <externalId>true</externalId>
        <label>external</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>long_text__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>long text</label>
        <length>32767</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>look__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>desc</description>
        <inlineHelpText>hrlp</inlineHelpText>
        <label>look</label>
        <referenceTo>Demo45__c</referenceTo>
        <relationshipLabel>ddds</relationshipLabel>
        <relationshipName>dddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lookupDemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aaa</description>
        <inlineHelpText>ssss</inlineHelpText>
        <label>lookupDemo</label>
        <referenceTo>BE_Bug__c</referenceTo>
        <relationshipName>lookupDemo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>multi__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>multi</label>
        <picklist>
            <picklistValues>
                <fullName>brian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>colleen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>numm__c</fullName>
        <label>numm</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>per4__c</fullName>
        <description>fwef</description>
        <inlineHelpText>wefwef</inlineHelpText>
        <label>per4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone_field__c</fullName>
        <description>des</description>
        <inlineHelpText>he</inlineHelpText>
        <label>phone field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pick__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>pick</label>
        <picklist>
            <picklistValues>
                <fullName>aaa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bbb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>required__c</fullName>
        <label>required</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rich_text__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>rich text</label>
        <length>32767</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rrurl__c</fullName>
        <description>regerg</description>
        <inlineHelpText>ergerg</inlineHelpText>
        <label>rrurl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sam22__c</fullName>
        <description>this is a desc2</description>
        <label>sam22</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>samA__c</fullName>
        <description>desc</description>
        <label>samA</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>samB__c</fullName>
        <description>desc</description>
        <label>samB</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>samC__c</fullName>
        <description>desc</description>
        <label>samC</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>samE__c</fullName>
        <defaultValue>&quot;bb&quot;</defaultValue>
        <inlineHelpText>ddddddddddddddddddddd</inlineHelpText>
        <label>samEBB</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sam__c</fullName>
        <description>desc</description>
        <label>sam</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scret__c</fullName>
        <description>ggg</description>
        <inlineHelpText>wewewww</inlineHelpText>
        <label>scret</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>unique__c</fullName>
        <label>unique</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>url_field__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>url field</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Demo</fullName>
        <active>true</active>
        <description>Demo RT</description>
        <label>Demo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample</fullName>
        <active>true</active>
        <description>Sample Record Type</description>
        <label>Sample</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AnnualRevenue &lt;0</errorConditionFormula>
        <errorMessage>WHOA Playboy!!! These people are broke!!!!!!!</errorMessage>
    </validationRules>
</CustomObject>